k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-argo-app
  namespace: argo-rollouts
  labels:
    app: go-argo-app
spec:
  replicas: 5
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 1
  #     maxUnavailable: 1
  selector:
    matchLabels:
      app: go-argo-app
  template:
    metadata:
      labels:
        app: go-argo-app
    spec:
      containers:
        - name: go-argo-app
          image: akashkdoc/go-argo-app:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "50m"
              memory: "10Mi"
            requests:
              cpu: "25m"
              memory: "6Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
