k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-argo-app-service
  namespace: argo-rollouts
  labels:
    app: go-argo-app
spec:
  type: ClusterIP
  selector:
    app: go-argo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
