k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-argo-app-ingress
  namespace: argo-rollouts
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: go-argo-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-argo-app-service
                port:
                  number: 80
